tests/errors/test_30.xpp
// Duplicate global var declarations

let x: i32;
let x: bool;

fn main() void {}
